--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
      R1199.99
    </div>
 </div>
-<div class="product-item">
+<!-- <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
        <img class="product-img" src="./products/14.png" alt="">
    </div>
@@ -387,15 +387,15 @@
    <div class="item-block-grid item-block-grid-3">
      R439.00
    </div>
-</div>
+</div> -->
 
-<div class="product-item">
+<!-- <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
       <img class="product-img" src="./products/15.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">Duram Fibre Coat - Grey 5Lt</div>
   <div class="item-block-grid item-block-grid-3">R279.00</div>
-</div>
+</div> -->
 
 <!-- <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
