--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
  <div class="pop-up-wrapper-1 d-flex">
     <p class="pop-up-content d-flex align-content-center">
       <span class="d-flex align-content-center">
-        Please note that these offers are only available from the 3rd of June to 29th of June 2022.
+        Please note that these offers are only available from the 3rd of June to the 29th of June 2022.
       </span>
       <button id="close-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -458,7 +458,7 @@
     <div class="pop-up-wrapper d-flex">
       <p class="pop-up-content d-flex align-content-center">
         <span class="d-flex align-content-center">
-          Please note that these offers are only available from the 3rd of June to 29th of June 2022.
+          Please note that these offers are only available from the 3rd of June to the 29th of June 2022.
         </span>
         <button id="close-2">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
