fixed the mistakes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
  <div class="pop-up-wrapper-1 d-flex">
     <p class="pop-up-content d-flex align-content-center">
       <span class="d-flex align-content-center">
-        Please note that these offers are only available from the 3rd of June to the 29th of June 2022.
+        Please note that these offers are only available from the 3rd of July to the 29th of July 2022.
       </span>
       <button id="close-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -237,14 +237,14 @@
             <div  class="item-block-grid item-block-grid-1">
                  <img class="product-img reset-height" src="./products/product1.png" alt="">
             </div>
-            <div class="item-block-grid item-block-grid-2">Bosch Impact Drill - 570 W</div>
+            <div class="item-block-grid item-block-grid-2">Bosch Impact Drill - 570W</div>
             <div class="item-block-grid item-block-grid-3">R649.00</div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img reset-height" src="./products/product2.png" alt="">
             </div>
-            <div class="item-block-grid item-block-grid-2">Bosch Jigsaw </div>
+            <div class="item-block-grid item-block-grid-2">Bosch Jigsaw - 650</div>
             <div class="item-block-grid item-block-grid-3">R599.00</div>
       </div>
       
@@ -252,14 +252,14 @@
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img" src="./products/product3.png" alt="">
             </div>
-            <div class="item-block-grid item-block-grid-2">Bosch Circular Saw</div>
+            <div class="item-block-grid item-block-grid-2">Bosch Circular Saw - Portable</div>
             <div class="item-block-grid item-block-grid-3">R2279.00</div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img" src="./products/product4.png" alt="">
             </div>
-            <div class="item-block-grid item-block-grid-2">Bosch Orbital Sander</div>
+            <div class="item-block-grid item-block-grid-2">Bosch Orbital Sander - GSS140</div>
             <div class="item-block-grid item-block-grid-3">R649.00</div>
       </div>
 
@@ -287,7 +287,7 @@
       <div class="item-block-grid item-block-grid-2">
        Bosch Angle Grinder - 700 115mm
       </div>
-      <div class="item-block-grid item-block-grid-3">R649.99 </div>
+      <div class="item-block-grid item-block-grid-3">R649.00 </div>
 </div>
 
 <div class="product-item">
@@ -297,7 +297,7 @@
       <div class="item-block-grid item-block-grid-2">
         PP NY 1 Sup Uni Ena - 5Lt White
       </div>
-      <div class="item-block-grid item-block-grid-3">R439.99 </div>
+      <div class="item-block-grid item-block-grid-3">R649.00 </div>
 </div>
 
 <div class="product-item">
@@ -305,7 +305,7 @@
           <img class="product-img" src="./products/product8.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Build it Bonding Liquid - Solvent Base Clear 5L
+        Build it Bonding Liquid - Solvent Base Clear 5Lt
       </div>
       <div class="item-block-grid item-block-grid-3">
         R359.00
@@ -322,7 +322,7 @@
           <img class="product-img" src="./products/product9.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Viva Paint Pva - Interior/exterior 20 Lt White/Cream
+        Viva Paint Pva - Interior/Exterior 20Lt White/Cream
       </div>
       <div class="item-block-grid item-block-grid-3">
         R299.00
@@ -333,7 +333,7 @@
           <img class="product-img" src="./products/product10.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Build it Wood Vanish
+       Build it Wood Varnish - 1Lt
           </div>
       <div class="item-block-grid item-block-grid-3">
         R159.99
@@ -356,10 +356,10 @@
          <img class="product-img" src="./products/product12.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-      Power Fix - 1lt Liquid
+      DK Gas Heater - Parabolic
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R169.99
+      R339.99
      </div>
 </div>
 <div class="product-row">
@@ -370,10 +370,10 @@
         <img class="product-img" src="./products/product13.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-     DK Gas Header - Parabolic
+      PowaFix Sugar Soap - 1Lt Liquid
     </div>
     <div class="item-block-grid item-block-grid-3">
-      R339.99
+      R169.99
     </div>
 
   </div>
@@ -382,10 +382,10 @@
         <img class="product-img" src="./products/product14.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-     DK Gas Header - Parabolic
+     Gas Heater
     </div>
     <div class="item-block-grid item-block-grid-3">
-      R339.99
+      R1199.99
     </div>
 
   </div>
@@ -473,7 +473,7 @@
     <div class="pop-up-wrapper d-flex">
       <p class="pop-up-content d-flex align-content-center">
         <span class="d-flex align-content-center">
-          Please note that these offers are only available from the 3rd of June to the 29th of June 2022.
+          Please note that these offers are only available from the 3rd of July to the 29th of July 2022.
         </span>
         <button id="close-2">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
