--- a/index.html
+++ b/index.html
@@ -365,53 +365,17 @@
 
 <div class="product-row">
   <!-- Swiper -->
-<!-- <div class="product-item">
-   <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image13.png" alt="">
-   </div>
-   <div class="item-block-grid item-block-grid-2">
-     Viva Paint Pva - Interior/Exterior 20Lt White/Cream
-   </div>
-   <div class="item-block-grid item-block-grid-3">
-     R299.00
-   </div>
-</div>
 <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image14.png" alt="">
+       <img class="product-img" src="./products/image17.png" alt="">
    </div>
    <div class="item-block-grid item-block-grid-2">
-    Build it Wood Varnish - 1Lt
-       </div>
+     Spray Gun + Rubber Hose - Combo Buy Both For Only
+   </div>
    <div class="item-block-grid item-block-grid-3">
-     R159.99
+     R749.99
    </div>
 </div>
-
-<div class="product-item">
-  <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image15.png" alt="">
-  </div>
-  <div class="item-block-grid item-block-grid-2">
-   Aluminium Ladder - Wonder Multi Purpose 1.7-3.8m
-  </div>
-  <div class="item-block-grid item-block-grid-3">
-   R1199.00
-  </div>
-</div> 
-<div class="product-item">
-  <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image16.png" alt="">
-  </div>
-  <div class="item-block-grid item-block-grid-2">
-   DK Gas Heater - Parabolic
-  </div>
-  <div class="item-block-grid item-block-grid-3">
-   R339.99
-  </div> -->
-</div> 
-
-
 
 
 </main>
