I updated every pruduct details

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         Square Natural
       </div>
       <div class="item-block-grid item-block-grid-3">R3299.00
-        EACH hello</div>
+        EACH guys come</div>
 </div>
 
 <div class="product-item">
