--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div>
             <div class="item-block-grid item-block-grid-2">Drain Channel
               & Grate
-              Black</div>
+              - Black</div>
             <div class="item-block-grid item-block-grid-3">R299.00
               EACH
             </div>
@@ -249,7 +249,7 @@
           <img class="product-img reset-height" src="./products/product two.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">Worklight
-              AA Battery
+              - AA Battery
               600 Lumens
               
             </div>
@@ -263,7 +263,7 @@
           <img class="product-img" src="./products/product three.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">Solar Lamp
-              Black Spot</div>
+              - Black Spot</div>
             <div class="item-block-grid item-block-grid-3">R109.99
               EACH</div>
       </div>
@@ -273,7 +273,7 @@
             </div>
             <div class="item-block-grid item-block-grid-2">Sink
               Cabinet
-              Comb 915</div>
+              - Comb 915</div>
             <div class="item-block-grid item-block-grid-3">R2399.99
               EACH</div>
       </div>
@@ -290,7 +290,7 @@
       </div>
       <div class="item-block-grid item-block-grid-2">
         Toilet Seat
-        Assorted Colours
+        - Assorted Colours
       </div>
       <div class="item-block-grid item-block-grid-3">R179.99
         EACH</div>
@@ -304,7 +304,7 @@
       <div class="item-block-grid item-block-grid-2">
         Pivot
         Shower Door
-        Square Natural
+        - Square Natural
       </div>
       <div class="item-block-grid item-block-grid-3">R3299.00
         EACH</div>
@@ -317,7 +317,7 @@
       <div class="item-block-grid item-block-grid-2">
         Pedestal &
         Basin
-        White
+        - White
       </div>
       <div class="item-block-grid item-block-grid-3">R499.99
         EACH</div>
@@ -330,7 +330,7 @@
       <div class="item-block-grid item-block-grid-2">
         TradePro
         PVA
-        20Lt
+        - 20Lt
         White
       </div>
       <div class="item-block-grid item-block-grid-3">
@@ -351,7 +351,7 @@
       <div class="item-block-grid item-block-grid-2">
         Build it
         Roof Paint
-        20Lt
+        - 20Lt
         Assorted Colours
       </div>
       <div class="item-block-grid item-block-grid-3">
@@ -366,7 +366,7 @@
       <div class="item-block-grid item-block-grid-2">
         Build it
         Roof Proof
-        5Lt Kit
+        - 5Lt Kit
         Assorted Colours
           </div>
       <div class="item-block-grid item-block-grid-3">
@@ -382,7 +382,7 @@
      <div class="item-block-grid item-block-grid-2">
       KnK
       Paint Brush
-      3 Pack
+      - 3 Pack
      </div>
      <div class="item-block-grid item-block-grid-3">
       R39.99
@@ -396,7 +396,7 @@
      </div>
      <div class="item-block-grid item-block-grid-2">
       Spray Gun
-      Plastic Cup
+      - Plastic Cup
       1.4mm
      </div>
      <div class="item-block-grid item-block-grid-3">
@@ -413,7 +413,7 @@
    </div>
    <div class="item-block-grid item-block-grid-2">
     Duolite Awning
-    Assorted Colours
+    - Assorted Colours
     Plastic + MWall
    </div>
    <div class="item-block-grid item-block-grid-3">
@@ -429,7 +429,7 @@
   <div class="item-block-grid item-block-grid-2">
     Georgia
     Sink Mixer
-    High Rise
+    - High Rise
   </div>
   <div class="item-block-grid item-block-grid-3">
     R1259.00
@@ -444,7 +444,7 @@
   <div class="item-block-grid item-block-grid-2">
     Darick
     Tilebond
-    5Lt
+    - 5Lt
   </div>
   <div class="item-block-grid item-block-grid-3">
     R159.99
@@ -459,7 +459,7 @@
   <div class="item-block-grid item-block-grid-2">
     Aluminium
     Ladder
-    Multi Purpose
+    - Multi Purpose
   </div>
   <div class="item-block-grid item-block-grid-3">
     R1299.99
@@ -474,7 +474,7 @@
   <div class="item-block-grid item-block-grid-2">
     Africa
     Water Tank
-    2500L
+    - 2500L
     Beige
   </div>
   <div class="item-block-grid item-block-grid-3">
