replaced the missing image

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/product fiveteen.png" alt="">
+      <img class="product-img" src="./products/product fifteen.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
     Darick
