flip image update

--- a/basic/index.html
+++ b/basic/index.html
@@ -17,15 +17,15 @@
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<!-- <div style="background-image:url(../flip-images/pic1.png)"></div>
-			 <div style="background-image:url(../flip-images/pic2.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic3.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic4.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic5.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_1.jpg)"></div>
+			 <div style="background-image:url(../flip-images/SR694_2.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_3.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_4.jpg)"></div>
+			<!-- <div style="background-image:url(../flip-images/pic5.jpg)"></div>
 			<div style="background-image:url(../flip-images/pic6.jpg)"></div>
 			<div style="background-image:url(../flip-images/pic7.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic8.jpg)"></div> -->
-			<!-- <div style="background-image:url(./flip-images/9.jpg)"></div>
+			<div style="background-image:url(../flip-images/pic8.jpg)"></div>
+			 <div style="background-image:url(./flip-images/9.jpg)"></div>
 			<div style="background-image:url(./flip-images/10.jpg)"></div>
 			<div style="background-image:url(./flip-images/11.jpg)"></div>
 			<div style="background-image:url(../flip-images/12.jpg)"></div> -->
