add extra changes on promotion

--- a/promotions.html
+++ b/promotions.html
@@ -202,18 +202,18 @@
           <div class="swiper-slide">
             <img data-zoomable src="./flip-images/SR694_4.jpg" alt=""/>
           </div>
-          <!-- <div class="swiper-slide">
-            <img data-zoomable src="./flip-images/pic5.jpg" alt=""/>
+          <div class="swiper-slide">
+            <img data-zoomable src="./flip-images/SR694_5.jpg" alt=""/>
           </div>
           <div class="swiper-slide">
-            <img data-zoomable src="./flip-images/pic6.jpg" alt=""/>
+            <img data-zoomable src="./flip-images/SR694_6.jpg" alt=""/>
           </div>
           <div class="swiper-slide">
-            <img data-zoomable src="./flip-images/pic7.jpg" alt=""/>
+            <img data-zoomable src="./flip-images/SR694_7.jpg" alt=""/>
           </div>
           <div class="swiper-slide">
-            <img data-zoomable src="./flip-images/pic8.jpg" alt=""/>
-          </div> -->
+            <img data-zoomable src="./flip-images/SR694_8.jpg" alt=""/>
+          </div>
           
 
         </div>
