--- a/basic/index.html
+++ b/basic/index.html
@@ -21,11 +21,11 @@
 			 <div style="background-image:url(../flip-images/SR694_2.jpg)"></div>
 			<div style="background-image:url(../flip-images/SR694_3.jpg)"></div>
 			<div style="background-image:url(../flip-images/SR694_4.jpg)"></div>
-			<!-- <div style="background-image:url(../flip-images/pic5.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic6.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic7.jpg)"></div>
-			<div style="background-image:url(../flip-images/pic8.jpg)"></div>
-			 <div style="background-image:url(./flip-images/9.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_5.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_6.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_7.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_8.jpg)"></div>
+			 <!-- <div style="background-image:url(./flip-images/9.jpg)"></div>
 			<div style="background-image:url(./flip-images/10.jpg)"></div>
 			<div style="background-image:url(./flip-images/11.jpg)"></div>
 			<div style="background-image:url(../flip-images/12.jpg)"></div> -->
