--- a/basic/index.html
+++ b/basic/index.html
@@ -25,6 +25,7 @@
 			<div style="background-image:url(../flip-images/SR694_6.jpg)"></div>
 			<div style="background-image:url(../flip-images/SR694_7.jpg)"></div>
 			<div style="background-image:url(../flip-images/SR694_8.jpg)"></div>
+			<div style="background-image:url(../flip-images/SR694_9.jpg)"></div>
 			 <!-- <div style="background-image:url(./flip-images/9.jpg)"></div>
 			<div style="background-image:url(./flip-images/10.jpg)"></div>
 			<div style="background-image:url(./flip-images/11.jpg)"></div>
