pushing latest supreme update

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="container-fluid jumbotron-content-container" style="padding: 0!important;">
   <div class="banner-swiper-container">
      <div class="swiper-wrapper">
-       <div class="swiper-slide"><img src="./img/Frame 4.jpg" alt=""></div> 
+       <div class="swiper-slide"><img src="./img/Frame 1.jpg" alt=""></div> 
        <div class="swiper-slide"><img src="./img/slide1.jpg" alt=""></div>
        <div class="swiper-slide"><img src="./img/slide3.png" alt=""></div>
        <div class="swiper-slide"><img src="./img/slide4.png" alt=""></div>
@@ -392,37 +392,37 @@
 </div>
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 112.png" alt="">
+      <img class="product-img" src="./products/image 119.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   DK Gas Cooker - 2 Burner Stainless Steel
+   Bosch Impact Drill - 570W
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R499.99
+    R599.00
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 113.png" alt="">
+      <img class="product-img" src="./products/image 120.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   Totai Gas Geyser - 10Lt/Min 13
+   Bosch Angle Grinder - 700 115mm
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R3299.99
+    R599.00
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 114.png" alt="">
+      <img class="product-img" src="./products/image 122.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Built it RoofProof Kit - 5Lt
+    VS Angle Grinder - 230mm 2400W
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R169.99
+    R1949.99
   </div>
   </div>
 
@@ -432,13 +432,13 @@
 <div class="product-row">
   <div class="product-item">
     <div class="item-block-grid item-block-grid-1">
-        <img class="product-img" src="./products/image 115.png" alt="">
+        <img class="product-img" src="./products/image 123.png" alt="">
     </div>
     <div class="item-block-grid item-block-grid-2">
-      Built it RoofProof Kit - 5Lt
+      Ingco Angle Polisher - 1400W 180mm
     </div>
     <div class="item-block-grid item-block-grid-3">
-      R169.99
+      R1199.99
     </div>
 </div>
 
@@ -456,37 +456,37 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 116.png" alt="">
+      <img class="product-img" src="./products/image 124.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Built it Fibre Coat - 5Lt
+    Ingco Jig Saw - 570W
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R279.00
+     R749.00
    </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 117.png" alt="">
+      <img class="product-img" src="./products/image 125.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Wall Craft Plaster Primer & Sealer
+    Ingco Jig Saw - 800W With 5 Piece Blade
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R599.99
+    R899.99
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 118.png" alt="">
+      <img class="product-img" src="./products/image 126.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Build it Bituminous Waterproof - 5Lt
+    VS Drill Driver 44 Piece - 20V 10mm 35NM 2.0 AH BAT STD Charger
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R249.99
+    R1699.00
   </div>
 </div>
 
