--- a/index.html
+++ b/index.html
@@ -235,41 +235,41 @@
            <!-- Swiper -->
       <div class="product-item">
             <div  class="item-block-grid item-block-grid-1">
-                 <img class="product-img reset-height" src="./products/image 99.png" alt="">
+                 <img class="product-img reset-height" src="./products/image 1.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Nandi Toilet Suite - White Front Flush W/Down
+              Powafix Sugar Soap Liquid - 5Lt
             </div>
-            <div class="item-block-grid item-block-grid-3">R1199.00
+            <div class="item-block-grid item-block-grid-3">R169.99
             </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img reset-height" src="./products/image 98.png" alt="">
+          <img class="product-img reset-height" src="./products/image 2.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Africa Water Tank - 2500L Beige</div>
-            <div class="item-block-grid item-block-grid-3">R2499.99
+             <div class="item-block-grid item-block-grid-2">Build it Bonding Liquid - Solvent Base Clear 5Lt </div>
+            <div class="item-block-grid item-block-grid-3">R359.00
             </div>
       </div>
       
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 100.png" alt="">
+          <img class="product-img" src="./products/image 3.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Pedestal & Basin - White
+              Build it Universal Undercoat - White 5Lt
             </div>
-            <div class="item-block-grid item-block-grid-3">R499.99
+            <div class="item-block-grid item-block-grid-3">R439.00
               </div>
       </div>
       <div class="product-item">
             <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 101.png" alt="">
+          <img class="product-img" src="./products/image 4.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              JoJo Pump Cover - Wintergrass
+              Build it Roofproof Kit - Grey 5Lt
             </div>
-            <div class="item-block-grid item-block-grid-3">R799.99
+            <div class="item-block-grid item-block-grid-3">R199.99
               </div>
       </div>
 
@@ -281,45 +281,45 @@
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 102.png" alt="">
+          <img class="product-img" src="./products/image 5.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Water Pump - 0.75kw with Suction Hose Kit
+       Build it Fibre Coat - Black 5Lt
       </div>
-      <div class="item-block-grid item-block-grid-3">R3399.00
+      <div class="item-block-grid item-block-grid-3">R279.00
         </div>
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-        <img class="product-img reset-height" src="./products/image 103.png" alt="">
+        <img class="product-img reset-height" src="./products/image 6.jpg" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        BDC Charcoal - Briquettes 4kg
+        Bosch Angle Grinder - 700 115mm
       </div>
-      <div class="item-block-grid item-block-grid-3">R49.99
-        </div>
-</div>
-
-<div class="product-item">
-      <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 104.png" alt="">
-      </div>
-      <div class="item-block-grid item-block-grid-2">
-        IHP Braai Grid - 900 x 600 Galvanised
-      </div>
-      <div class="item-block-grid item-block-grid-3">R361.99
+      <div class="item-block-grid item-block-grid-3">R599.99
         </div>
 </div>
 
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 105.png" alt="">
+          <img class="product-img" src="./products/image 7.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        Aluminium Window - PT99 900 x 900
+        Bosch Impact Drill - 570W
+      </div>
+      <div class="item-block-grid item-block-grid-3">R599.99
+        </div>
+</div>
+
+<div class="product-item">
+      <div class="item-block-grid item-block-grid-1">
+          <img class="product-img" src="./products/image 8.jpg" alt="">
+      </div>
+      <div class="item-block-grid item-block-grid-2">
+        MUS Power Inverter - 1440W-2400va Modified Sinewave
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R899.00
+        R13999.99
       </div>
 </div>
 
@@ -330,48 +330,48 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 107.png" alt="">
+          <img class="product-img" src="./products/image 9.jpg" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Aluminium Sliding Door - 1800 x 2100 Bronze
+       Mat Gumboot Bata Jobber Black - size: 7, 8, 9 & 10
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R2699.00
+        R179.99
       </div>
 </div>
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 108.png" alt="">
+          <img class="product-img" src="./products/image 10.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-      DP Crack Fill - White 10kg
+      Mat Rainsuite MSafe Navy - M / L / XL
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R189.99
+        R279.00
       </div>
 </div>
 
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 109.png" alt="">
+         <img class="product-img" src="./products/image 11.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Ampax Flash Lamp Rechargeable - 60 LED
+     Underground Pipe - 110 x 600m
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R349.99
+      R239.99
      </div>
 
 </div>
 <div class="product-item">
      <div class="item-block-grid item-block-grid-1">
-         <img class="product-img" src="./products/image 110.png" alt="">
+         <img class="product-img" src="./products/image 12.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Taz Solvent Pool Acid - 5Lt
+     RW Gutter Square - 100 x 75 x 6.0m
      </div>
      <div class="item-block-grid item-block-grid-3">
-      R109.99
+      R279.00
      </div>
 </div>
 </div>
@@ -380,37 +380,37 @@
   <!-- Swiper -->
 <div class="product-item">
    <div class="item-block-grid item-block-grid-1">
-       <img class="product-img" src="./products/image 111.png" alt="">
+       <img class="product-img" src="./products/image 13.png" alt="">
    </div>
    <div class="item-block-grid item-block-grid-2">
-   Poly Drum 25Lt + Tap
+     Duralux Toilet Seat - White
    </div>
    <div class="item-block-grid item-block-grid-3">
-     R179.99
+     R199.99
    </div>
 
 </div>
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 119.png" alt="">
+      <img class="product-img" src="./products/image 14.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   Bosch Impact Drill - 570W
+    Water Pump - 0.37KW With Suction Hose Kit
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R599.00
+    R2199.00
   </div>
 </div>
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 120.png" alt="">
+      <img class="product-img" src="./products/image 15.jpg" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   Bosch Angle Grinder - 700 115mm
+   Toilet Suite - White CC Front Flush Nandi Wash Down
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R599.00
+    R1199.00
   </div>
 </div>
 
@@ -429,7 +429,7 @@
 
 </div>
 
-<div class="product-row">
+<!-- <div class="product-row">
   <div class="product-item">
     <div class="item-block-grid item-block-grid-1">
         <img class="product-img" src="./products/image 123.png" alt="">
@@ -440,7 +440,7 @@
     <div class="item-block-grid item-block-grid-3">
       R1199.99
     </div>
-</div>
+</div> -->
 
 <!-- <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
@@ -454,7 +454,7 @@
   </div>
 </div> -->
 
-<div class="product-item">
+<!-- <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
       <img class="product-img" src="./products/image 124.png" alt="">
   </div>
@@ -488,7 +488,7 @@
   <div class="item-block-grid item-block-grid-3">
     R1699.00
   </div>
-</div>
+</div> -->
 
 </div>
 
