pushing updated date

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
  <div class="pop-up-wrapper-1 d-flex">
     <p class="pop-up-content d-flex align-content-center">
       <span class="d-flex align-content-center">
-        Please note that these offers are only available from the 1st to the 28th of November 2022.
+        Please note that these offers are only available until 14th of January 2023.
       </span>
       <button id="close-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -499,7 +499,8 @@
     <div class="pop-up-wrapper d-flex">
       <p class="pop-up-content d-flex align-content-center">
         <span class="d-flex align-content-center">
-          Please note that these offers are only available from the 1st to the 28th of November 2022.
+          Please note that these offers are only available until 14th of January 2023.
+          <!-- from the 1st to the 28th of -->
         </span>
         <button id="close-2">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
