--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image 9.jpg" alt="">
+          <img class="product-img" src="./products/image9.jpg" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Mat Gumboot Bata Jobber Black - size: 7, 8, 9 & 10
+       VS Angle Grinder - 230mm 2400W
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R179.99
+        R1949.99
       </div>
 </div>
 <div class="product-item">
