--- a/index.html
+++ b/index.html
@@ -416,14 +416,13 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 122.png" alt="">
+      <img class="product-img" src="./products/image 123.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    VS Angle Grinder - 230mm 2400W
+    Ingco Angle Polisher - 1400W 180mm
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R1949.99
-  </div>
+    R1199.99
   </div>
 
 
