--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
      <!-- Swiper -->
 <div class="product-item">
       <div class="item-block-grid item-block-grid-1">
-          <img class="product-img" src="./products/image9.jpg" alt="">
+          <img class="product-img" src="./products/image 9.jpg" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       VS Angle Grinder - 230mm 2400W
+       Mat Gumboot Bata Jobber Black - Size: 7, 8, 9 & 10
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R1949.99
+        R179.99
       </div>
 </div>
 <div class="product-item">
@@ -416,13 +416,13 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 123.png" alt="">
+      <img class="product-img" src="./products/image 122.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    Ingco Angle Polisher - 1400W 180mm
+    VS Angle Grinder - 230mm 2400W
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R1199.99
+    R1949.99
   </div>
 
 
