--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
           <img class="product-img" src="./products/image 9.jpg" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-       Mat Gumboot Bata Jobber Black - Size: 7, 8, 9 & 10
+       VS Angle Grinder - 230mm 2400VW
       </div>
       <div class="item-block-grid item-block-grid-3">
-        R179.99
+        R1949.99
       </div>
 </div>
 <div class="product-item">
@@ -416,14 +416,16 @@
 
 <div class="product-item">
   <div class="item-block-grid item-block-grid-1">
-      <img class="product-img" src="./products/image 122.png" alt="">
+      <img class="product-img" src="./products/image 123.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-    VS Angle Grinder - 230mm 2400W
+    Ingco Angle Polisher - 1400W 180mm
   </div>
   <div class="item-block-grid item-block-grid-3">
-    R1949.99
+    R1199.99
   </div>
+
+
 </div>
 
 <!-- <div class="product-row">
