pushing latest updated on february

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
             <div class="item-block-grid item-block-grid-1">
           <img class="product-img reset-height" src="./products/image 8.png" alt="">
             </div>
-             <div class="item-block-grid item-block-grid-2">Nibella Dust Mask - Disposable </div>
-            <div class="item-block-grid item-block-grid-3">R99.00
+             <div class="item-block-grid item-block-grid-2">Dust Mask - Disposable</div>
+            <div class="item-block-grid item-block-grid-3">R20.00
             </div>
       </div>
       
@@ -273,7 +273,7 @@
           <img class="product-img" src="./products/image 10.png" alt="">
             </div>
             <div class="item-block-grid item-block-grid-2">
-              Ampax Floodlight - Multi Solar Kit
+             Floodlight - Multi Solar Kit
             </div>
             <div class="item-block-grid item-block-grid-3">R549.99
               </div>
@@ -290,7 +290,7 @@
           <img class="product-img" src="./products/image 11.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-        apollo Sink Mixer - C.P Wall Type
+        Sink Mixer - C.P Wall Type
       </div>
       <div class="item-block-grid item-block-grid-3">R549.99
         </div>
@@ -350,7 +350,7 @@
           <img class="product-img" src="./products/image 17.png" alt="">
       </div>
       <div class="item-block-grid item-block-grid-2">
-      MTS Spade Digging - Steel Shaft
+      Spade Digging - Steel Shaft
       </div>
       <div class="item-block-grid item-block-grid-3">
         R164.99
@@ -362,7 +362,7 @@
          <img class="product-img" src="./products/image 18.png" alt="">
      </div>
      <div class="item-block-grid item-block-grid-2">
-     Taz Solvent Pool Acid 5Lt
+     Solvent Pool Acid 5Lt
      </div>
      <div class="item-block-grid item-block-grid-3">
       R109.99
@@ -389,7 +389,7 @@
        <img class="product-img" src="./products/image 20.png" alt="">
    </div>
     <div class="item-block-grid item-block-grid-2">
-     KNK Paint Brush - Aqua 3 Pack
+     Paint Brush - Aqua 3 Pack
      </div>
      <div class="item-block-grid item-block-grid-3">
       R44.99
@@ -413,7 +413,7 @@
       <img class="product-img" src="./products/image 22.png" alt="">
   </div>
   <div class="item-block-grid item-block-grid-2">
-   DK Gas Cartrdige - Lamp Piezzo Ignition
+   Gas Cartrdige - Lamp Piezzo Ignition
   </div>
   <div class="item-block-grid item-block-grid-3">
     R379.99
